--- a/index.html
+++ b/index.html
@@ -4,33 +4,38 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Paneles Solares Tier One en Córdoba | Tedle</title>
-  <meta name="description" content="Distribuidor mayorista en Córdoba. Paneles solares Tier One con stock local, retiro en 2 h, bundles para instaladores y soporte técnico.">
+  <meta name="description" content="Distribuidor mayorista en Córdoba. Paneles solares Tier One con stock local, retiro en 2 h y kits solares listos para instalar con soporte técnico.">
   <link rel="canonical" href="https://tedle-cordoba-landing.vercel.app/">
   <meta name="robots" content="index,follow">
+
   <!-- Open Graph -->
   <meta property="og:title" content="Paneles Solares Tier One en Córdoba | Tedle">
   <meta property="og:description" content="Stock local · Retiro en 2 h · Precios mayoristas para instaladores.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tedle-cordoba-landing.vercel.app/">
   <meta property="og:image" content="/og.jpg">
+
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Paneles Solares Tier One en Córdoba | Tedle">
   <meta name="twitter:description" content="Stock local · Retiro en 2 h · Precios mayoristas para instaladores.">
-  <!-- Favicon (SVG inline) -->
-  <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><defs/><rect rx="12" ry="12" width="64" height="64" fill="%2310b981"/><path d="M19 41l8-18 6 10 5-7 7 15" fill="none" stroke="white" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/></svg>'>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico">
+
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .glass { backdrop-filter: blur(10px); background: rgba(255,255,255,.6) }
   </style>
-  <!-- Structured Data (LocalBusiness) -->
+
+  <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Tedle Córdoba - Paneles Solares Tier One",
-    "image": "https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=1600&q=80",
+    "image": "/og.jpg",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Córdoba",
@@ -58,8 +63,8 @@
   <header class="border-b">
     <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <!-- Logo Tier One (SVG) -->
-        <svg width="38" height="38" viewBox="0 0 64 64" class="shrink-0">
+        <!-- Logo -->
+        <svg width="38" height="38" viewBox="0 0 64 64" class="shrink-0" aria-label="Logo Tier One">
           <defs><linearGradient id="g" x1="0" x2="1"><stop offset="0" stop-color="#10b981"/><stop offset="1" stop-color="#059669"/></linearGradient></defs>
           <rect rx="12" ry="12" width="64" height="64" fill="url(#g)"/>
           <path d="M19 41l8-18 6 10 5-7 7 15" fill="none" stroke="white" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -70,9 +75,8 @@
         </div>
       </div>
       <nav class="hidden md:flex items-center gap-6 text-sm">
-        <a href="#packs" class="hover:text-emerald-600">Bundles</a>
+        <a href="#kits" class="hover:text-emerald-600">Kits</a>
         <a href="#diferenciales" class="hover:text-emerald-600">¿Por qué Tier One?</a>
-        <a href="#faq" class="hover:text-emerald-600">FAQ</a>
         <a href="#contacto" class="hover:text-emerald-600">Contacto</a>
         <a id="wa-header" href="#" class="bg-emerald-600 text-white px-4 py-2 rounded-lg font-semibold hover:bg-emerald-700">Cotizar</a>
       </nav>
@@ -80,22 +84,19 @@
   </header>
 
   <!-- HERO -->
-  <section class="relative overflow-hidden">
-    <img
-      src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=1920&q=80"
-      alt="Parque de paneles solares al atardecer"
-      class="absolute inset-0 w-full h-full object-cover"
-      loading="eager" fetchpriority="high" />
+  <section class="relative overflow-hidden" aria-label="Parque de paneles solares a gran escala">
+    <img src="/hero-solar.jpg" alt="Parque de paneles solares a gran escala en Córdoba" class="absolute inset-0 w-full h-full object-cover" loading="eager" fetchpriority="high" />
     <div class="absolute inset-0 bg-slate-900/60"></div>
+
     <div class="relative max-w-7xl mx-auto px-4 py-28 text-white">
       <div class="max-w-3xl">
         <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">
           Paneles solares <span class="text-emerald-400">Tier One</span> con stock en Córdoba
         </h1>
-        <p class="mt-4 text-lg text-white/90">Precios mayoristas para instaladores · retiro en 2 h · bundles listos y soporte técnico.</p>
+        <p class="mt-4 text-lg text-white/90">Precios mayoristas para instaladores · retiro en 2 h · <strong>kits solares listos</strong> y soporte técnico.</p>
         <div class="mt-8 flex flex-wrap gap-3">
           <a id="wa-cta-hero" href="#" class="bg-emerald-500 hover:bg-emerald-600 text-slate-900 font-extrabold px-6 py-3 rounded-xl shadow-lg">💬 Cotizar por WhatsApp</a>
-          <a href="#packs" class="glass text-slate-900 font-semibold px-6 py-3 rounded-xl">Ver bundles para instaladores</a>
+          <a href="#kits" class="glass text-slate-900 font-semibold px-6 py-3 rounded-xl">Ver kits solares</a>
         </div>
         <div class="mt-6 flex items-center gap-6 text-sm text-white/80">
           <div class="flex items-center gap-2"><span class="w-2 h-2 rounded-full bg-emerald-400"></span> Garantía de fábrica</div>
@@ -109,38 +110,38 @@
   <!-- DIFERENCIALES -->
   <section id="diferenciales" class="max-w-7xl mx-auto px-4 py-16">
     <h2 class="text-3xl font-extrabold">¿Por qué <span class="text-emerald-600">Tier One</span>?</h2>
-    <p class="mt-3 text-slate-600">Trabajamos con fabricantes del ranking Tier One (bancos y fondos los financian por su solvencia y performance). En campo se traduce en menos fallas y mejor retorno para tus clientes.</p>
+    <p class="mt-3 text-slate-600">Trabajamos con fabricantes del ranking Tier One. En campo se traduce en menos fallas y mejor retorno para tus clientes.</p>
 
     <div class="mt-8 grid md:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border">
-        <img src="https://images.unsplash.com/photo-1558443957-0c09a1f1a1a3?auto=format&fit=crop&w=800&q=70" alt="Instalador trabajando en techo" class="rounded-xl w-full h-44 object-cover" loading="lazy" decoding="async">
+        <img src="/instalador-techo.jpg" alt="Instalador de paneles solares en techo en Córdoba" class="rounded-xl w-full h-44 object-cover">
         <h3 class="mt-4 font-bold text-lg">Eficiencia y potencia real</h3>
         <p class="text-slate-600 mt-1">Módulos N-Type, bifaciales y garantías de producción. Fichas técnicas transparentes.</p>
       </div>
       <div class="p-6 rounded-2xl border">
-        <img src="https://images.unsplash.com/photo-1584270354949-c26b0cbfdc3b?auto=format&fit=crop&w=800&q=70" alt="Depósito con stock de paneles" class="rounded-xl w-full h-44 object-cover" loading="lazy" decoding="async">
+        <img src="/deposito-stock.jpg" alt="Depósito con stock de paneles solares Tier One" class="rounded-xl w-full h-44 object-cover">
         <h3 class="mt-4 font-bold text-lg">Stock local · retiro en 2 h</h3>
         <p class="text-slate-600 mt-1">Depósito en Córdoba. Retirá en el día o coordiná envío a obra.</p>
       </div>
       <div class="p-6 rounded-2xl border">
-        <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?auto=format&fit=crop&w=800&q=70" alt="Equipo técnico asesorando" class="rounded-xl w-full h-44 object-cover" loading="lazy" decoding="async">
+        <img src="/instalacion-industrial.jpg" alt="Instalación industrial de paneles solares en gran escala" class="rounded-xl w-full h-44 object-cover">
         <h3 class="mt-4 font-bold text-lg">Soporte al instalador</h3>
-        <p class="text-slate-600 mt-1">Bundles dimensionados, curvas IV y asistencia de puesta en marcha.</p>
+        <p class="text-slate-600 mt-1">Kits dimensionados, curvas IV y asistencia de puesta en marcha.</p>
       </div>
     </div>
   </section>
 
-  <!-- PACKS -->
-  <section id="packs" class="bg-slate-50 py-16">
+  <!-- KITS -->
+  <section id="kits" class="bg-slate-50 py-16">
     <div class="max-w-7xl mx-auto px-4">
-      <h2 class="text-3xl font-extrabold">Bundles para instaladores</h2>
-      <p class="mt-3 text-slate-600">Listos para cotizar residencial y comercial. Armados para mejorar tu margen y tiempos de instalación.</p>
+      <h2 class="text-3xl font-extrabold">Kits solares listos para instalar</h2>
+      <p class="mt-3 text-slate-600">Incluye paneles, inversor, estructuras y accesorios. Cotización inmediata y soporte técnico.</p>
 
       <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <!-- Card -->
+        <!-- Kit 1 -->
         <div class="bg-white p-6 rounded-2xl border shadow-sm">
           <h3 class="font-bold text-lg">Residencial 3 kW</h3>
-          <img class="rounded-xl w-full h-40 object-cover mt-3" src="https://images.unsplash.com/photo-1508514177221-188b1cf16e9d?auto=format&fit=crop&w=800&q=70" alt="Bundle residencial 3kW" loading="lazy">
+          <img class="rounded-xl w-full h-40 object-cover mt-3" src="/instalador-techo.jpg" alt="Kit solar residencial 3 kW en techo">
           <ul class="mt-3 text-sm text-slate-600 space-y-1">
             <li>• 6 paneles 500–550 W Tier One</li>
             <li>• Inversor híbrido</li>
@@ -148,10 +149,10 @@
           </ul>
           <a id="wa-pack1" href="#" class="mt-4 inline-block w-full text-center bg-emerald-600 text-white py-2 rounded-lg font-semibold hover:bg-emerald-700">Cotizar por WhatsApp</a>
         </div>
-
+        <!-- Kit 2 -->
         <div class="bg-white p-6 rounded-2xl border shadow-sm">
           <h3 class="font-bold text-lg">Residencial 5 kW</h3>
-          <img class="rounded-xl w-full h-40 object-cover mt-3" src="https://images.unsplash.com/photo-1506629082955-511b1aa562c8?auto=format&fit=crop&w=800&q=70" alt="Bundle residencial 5kW" loading="lazy">
+          <img class="rounded-xl w-full h-40 object-cover mt-3" src="/deposito-stock.jpg" alt="Kit solar residencial 5 kW con stock en Córdoba">
           <ul class="mt-3 text-sm text-slate-600 space-y-1">
             <li>• 10 paneles 500–550 W Tier One</li>
             <li>• Inversor híbrido</li>
@@ -159,10 +160,10 @@
           </ul>
           <a id="wa-pack2" href="#" class="mt-4 inline-block w-full text-center bg-emerald-600 text-white py-2 rounded-lg font-semibold hover:bg-emerald-700">Cotizar por WhatsApp</a>
         </div>
-
+        <!-- Kit 3 -->
         <div class="bg-white p-6 rounded-2xl border shadow-sm">
           <h3 class="font-bold text-lg">Comercial 10 kW</h3>
-          <img class="rounded-xl w-full h-40 object-cover mt-3" src="https://images.unsplash.com/photo-1518736114810-3f3bedf793a3?auto=format&fit=crop&w=800&q=70" alt="Bundle comercial 10kW" loading="lazy">
+          <img class="rounded-xl w-full h-40 object-cover mt-3" src="/instalacion-industrial.jpg" alt="Kit solar comercial 10 kW en industria">
           <ul class="mt-3 text-sm text-slate-600 space-y-1">
             <li>• 18–20 paneles 500–550 W</li>
             <li>• Inversor trifásico</li>
@@ -174,35 +175,12 @@
     </div>
   </section>
 
-  <!-- COMPARATIVA -->
-  <section class="max-w-7xl mx-auto px-4 py-16">
-    <h2 class="text-3xl font-extrabold">Tier One vs. genérico</h2>
-    <div class="mt-6 grid md:grid-cols-2 gap-6">
-      <div class="p-6 rounded-2xl border">
-        <h3 class="font-bold">Tier One</h3>
-        <ul class="mt-2 text-slate-600 space-y-1">
-          <li>✓ Auditorías bancarias y trazabilidad</li>
-          <li>✓ Eficiencias superiores y menor degradación</li>
-          <li>✓ Garantías robustas y soporte real</li>
-        </ul>
-      </div>
-      <div class="p-6 rounded-2xl border">
-        <h3 class="font-bold">Genérico</h3>
-        <ul class="mt-2 text-slate-600 space-y-1">
-          <li>✕ Rendimiento inconsistente</li>
-          <li>✕ Soporte limitado</li>
-          <li>✕ Fichas poco claras</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
   <!-- CONTACTO -->
   <section id="contacto" class="bg-slate-900 text-white">
     <div class="max-w-7xl mx-auto px-4 py-16 grid md:grid-cols-2 gap-8">
       <div>
         <h2 class="text-3xl font-extrabold">Hablemos de tu próximo proyecto</h2>
-        <p class="mt-3 text-white/80">Atención a instaladores y empresas. Enviamos lista mayorista y armamos bundles a medida.</p>
+        <p class="mt-3 text-white/80">Atención a instaladores y empresas. Enviamos lista mayorista y armamos kits a medida.</p>
         <div class="mt-6 space-y-2 text-white/90">
           <div>📍 <span id="direccion">Depósito Córdoba</span></div>
           <a id="maps" href="#" target="_blank" class="underline">Ver mapa</a>
@@ -210,6 +188,7 @@
         <a id="wa-cta-contacto" href="#" class="mt-6 inline-block bg-emerald-500 hover:bg-emerald-600 text-slate-900 font-extrabold px-6 py-3 rounded-xl">💬 Cotizar por WhatsApp</a>
       </div>
 
+      <!-- Formulario -->
       <form id="lead" class="bg-white text-slate-900 p-6 rounded-2xl shadow">
         <h3 class="font-bold text-lg">Solicitar lista mayorista</h3>
         <div class="grid grid-cols-1 gap-3 mt-3">
@@ -231,7 +210,7 @@
       <div>© <span id="year"></span> Tedle Córdoba – Paneles Solares Tier One</div>
       <div class="flex items-center gap-6">
         <a href="#diferenciales" class="hover:text-slate-700">Diferenciales</a>
-        <a href="#packs" class="hover:text-slate-700">Bundles</a>
+        <a href="#kits" class="hover:text-slate-700">Kits</a>
         <a href="#contacto" class="hover:text-slate-700">Contacto</a>
       </div>
     </div>
@@ -242,33 +221,26 @@
 
   <!-- CONFIG + UTM/CTAs -->
   <script>
-    // ======== EDITAR ESTOS DATOS ========
     const WHATSAPP_NUMBER = "5493516123456";
     const REP_EMAIL       = "ventascordoba@tedle.net";
     const ADDRESS         = "Av. Colón 1234, Córdoba Capital";
     const MAPS_LINK       = "https://goo.gl/maps/xxxxx";
-    // ====================================
 
-    // Relleno dinámico
     document.getElementById("year").textContent = new Date().getFullYear();
     document.getElementById("direccion").textContent = ADDRESS;
     document.getElementById("maps").href = MAPS_LINK;
 
-    // UTM de la URL
     const utm = window.location.search || "?utm_source=direct&utm_medium=none&utm_campaign=site";
 
-    // Construir mensaje WA con UTM
     function waLink(extra = "") {
       const base = `https://wa.me/${WHATSAPP_NUMBER}`;
-      const text = `Hola, quiero cotizar paneles Tier One en Córdoba. ${extra} ${utm}`;
+      const text = `Hola, quiero cotizar kits solares Tier One en Córdoba. ${extra} ${utm}`;
       return `${base}?text=${encodeURIComponent(text)}`;
     }
 
-    // Asignar CTAs
     ["wa-top","wa-header","wa-cta-hero","wa-cta-contacto","wa-pack1","wa-pack2","wa-pack3","wa-float"]
       .forEach(id => { const a = document.getElementById(id); if (a) a.href = waLink(a.textContent?.trim()); });
 
-    // Form: enviar por mail (sin backend)
     document.getElementById("lead").addEventListener("submit", (e) => {
       e.preventDefault();
       const empresa  = document.getElementById("empresa").value;
@@ -279,10 +251,4 @@
 
       const subject = encodeURIComponent("Solicitud de lista mayorista - Tedle Córdoba");
       const body = encodeURIComponent(
-        `Empresa: ${empresa}\nNombre: ${nombre}\nEmail: ${email}\nTeléfono: ${telefono}\nMensaje: ${mensaje}\n\nUTM: ${utm}`
-      );
-      window.location.href = `mailto:${REP_EMAIL}?subject=${subject}&body=${body}`;
-    });
-  </script>
-</body>
-</html>
+        `Empresa: ${empresa}\nNombre: ${nombre}\nEmail: ${email}\nTeléfono: ${telefono}\nMensaje: ${mensaje}\n\nUTM:
