--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
   <meta property="og:description" content="Stock local · Retiro en 2 h · Kits solares listos y soporte técnico.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tedle-cordoba-landing.vercel.app/">
-  <meta property="og:image" content="/og.jpg">
+  <meta property="og:image" content="public/og.jpg">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Paneles Solares Tier One en Córdoba | Tedle">
   <meta name="twitter:description" content="Stock local · Retiro en 2 h · Kits solares listos y soporte técnico.">
 
-  <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="public/favicon.ico">
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -46,7 +45,7 @@
   <header class="border-b">
     <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <img src="/logo-tedle.jpg" alt="Logo Tedle" class="h-12">
+        <img src="public/logo-tedle.jpg" alt="Logo Tedle" class="h-12">
         <div>
           <div class="font-extrabold leading-5">TEDLE · Córdoba</div>
           <div class="text-xs text-slate-500 -mt-0.5">Distribuidor Tier One</div>
@@ -64,9 +63,9 @@
   <!-- HERO con Slider -->
   <section class="relative h-[85vh] flex items-center justify-center text-center text-white">
     <div class="slider absolute inset-0">
-      <img src="/hero-solar.jpg" alt="Paneles solares a gran escala" class="slide active w-full h-full object-cover">
-      <img src="/instalador-techo.jpg" alt="Instalador colocando paneles solares en techo" class="slide w-full h-full object-cover">
-      <img src="/instalacion-industrial.jpg" alt="Instalación industrial de paneles solares" class="slide w-full h-full object-cover">
+      <img src="public/hero-solar.jpg" alt="Paneles solares a gran escala" class="slide active w-full h-full object-cover">
+      <img src="public/instalador-techo.jpg" alt="Instalador colocando paneles solares en techo" class="slide w-full h-full object-cover">
+      <img src="public/instalacion-industrial.jpg" alt="Instalación industrial de paneles solares" class="slide w-full h-full object-cover">
     </div>
     <div class="absolute inset-0 bg-slate-900/60"></div>
 
@@ -82,11 +81,111 @@
     </div>
   </section>
 
-  <!-- Aquí mantenés secciones DIFERENCIALES, KITS y CONTACTO del código anterior -->
+  <!-- DIFERENCIALES -->
+  <section id="diferenciales" class="max-w-7xl mx-auto px-4 py-16">
+    <h2 class="text-3xl font-extrabold">¿Por qué <span class="text-emerald-600">Tier One</span>?</h2>
+    <p class="mt-3 text-slate-600">Trabajamos con fabricantes del ranking Tier One (bancos y fondos los financian por su solvencia y performance). En campo se traduce en menos fallas y mejor retorno para tus clientes.</p>
 
-  <!-- Footer -->
-  <footer class="py-10 text-sm text-slate-500 text-center">
-    © <span id="year"></span> Tedle Córdoba – Paneles Solares Tier One
+    <div class="mt-8 grid md:grid-cols-3 gap-6">
+      <div class="p-6 rounded-2xl border">
+        <img src="public/instalador-techo.jpg" alt="Instalador de paneles solares en techo en Córdoba" class="rounded-xl w-full h-44 object-cover" loading="lazy" decoding="async">
+        <h3 class="mt-4 font-bold text-lg">Eficiencia y potencia real</h3>
+        <p class="text-slate-600 mt-1">Módulos N-Type, bifaciales y garantías de producción. Fichas técnicas transparentes.</p>
+      </div>
+      <div class="p-6 rounded-2xl border">
+        <img src="public/deposito-stock.jpg" alt="Depósito con stock de paneles solares Tier One" class="rounded-xl w-full h-44 object-cover" loading="lazy" decoding="async">
+        <h3 class="mt-4 font-bold text-lg">Stock local · retiro en 2 h</h3>
+        <p class="text-slate-600 mt-1">Depósito en Córdoba. Retirá en el día o coordiná envío a obra.</p>
+      </div>
+      <div class="p-6 rounded-2xl border">
+        <img src="public/instalacion-industrial.jpg" alt="Instalación industrial de paneles solares en gran escala" class="rounded-xl w-full h-44 object-cover" loading="lazy" decoding="async">
+        <h3 class="mt-4 font-bold text-lg">Soporte al instalador</h3>
+        <p class="text-slate-600 mt-1">Kits dimensionados, curvas IV y asistencia de puesta en marcha.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- KITS -->
+  <section id="kits" class="bg-slate-50 py-16">
+    <div class="max-w-7xl mx-auto px-4">
+      <h2 class="text-3xl font-extrabold">Kits solares listos para instalar</h2>
+      <p class="mt-3 text-slate-600">Completo: paneles, inversor, estructuras y accesorios. Cotización inmediata y soporte técnico.</p>
+
+      <div class="mt-8 grid md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded-2xl border shadow-sm">
+          <h3 class="font-bold text-lg">Residencial 3 kW</h3>
+          <img class="rounded-xl w-full h-40 object-cover mt-3" src="public/instalador-techo.jpg" alt="Kit solar residencial 3 kW en techo" loading="lazy">
+          <ul class="mt-3 text-sm text-slate-600 space-y-1">
+            <li>• 6 paneles 500–550 W Tier One</li>
+            <li>• Inversor híbrido</li>
+            <li>• Estructuras + conectores</li>
+          </ul>
+          <a id="wa-pack1" href="#" class="mt-4 inline-block w-full text-center bg-emerald-600 text-white py-2 rounded-lg font-semibold hover:bg-emerald-700">Cotizar por WhatsApp</a>
+        </div>
+
+        <div class="bg-white p-6 rounded-2xl border shadow-sm">
+          <h3 class="font-bold text-lg">Residencial 5 kW</h3>
+          <img class="rounded-xl w-full h-40 object-cover mt-3" src="public/deposito-stock.jpg" alt="Kit solar residencial 5 kW con stock en Córdoba" loading="lazy">
+          <ul class="mt-3 text-sm text-slate-600 space-y-1">
+            <li>• 10 paneles 500–550 W Tier One</li>
+            <li>• Inversor híbrido</li>
+            <li>• Estructuras + conectores</li>
+          </ul>
+          <a id="wa-pack2" href="#" class="mt-4 inline-block w-full text-center bg-emerald-600 text-white py-2 rounded-lg font-semibold hover:bg-emerald-700">Cotizar por WhatsApp</a>
+        </div>
+
+        <div class="bg-white p-6 rounded-2xl border shadow-sm">
+          <h3 class="font-bold text-lg">Comercial 10 kW</h3>
+          <img class="rounded-xl w-full h-40 object-cover mt-3" src="public/instalacion-industrial.jpg" alt="Kit solar comercial 10 kW en industria" loading="lazy">
+          <ul class="mt-3 text-sm text-slate-600 space-y-1">
+            <li>• 18–20 paneles 500–550 W</li>
+            <li>• Inversor trifásico</li>
+            <li>• Estructuras, conectores y protecciones</li>
+          </ul>
+          <a id="wa-pack3" href="#" class="mt-4 inline-block w-full text-center bg-emerald-600 text-white py-2 rounded-lg font-semibold hover:bg-emerald-700">Cotizar por WhatsApp</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACTO -->
+  <section id="contacto" class="bg-slate-900 text-white">
+    <div class="max-w-7xl mx-auto px-4 py-16 grid md:grid-cols-2 gap-8">
+      <div>
+        <h2 class="text-3xl font-extrabold">Hablemos de tu próximo proyecto</h2>
+        <p class="mt-3 text-white/80">Atención a instaladores y empresas. Enviamos lista mayorista y armamos kits a medida.</p>
+        <div class="mt-6 space-y-2 text-white/90">
+          <div>📍 <span id="direccion">Depósito Córdoba</span></div>
+          <a id="maps" href="#" target="_blank" class="underline">Ver mapa</a>
+        </div>
+        <a id="wa-cta-contacto" href="#" class="mt-6 inline-block bg-emerald-500 hover:bg-emerald-600 text-slate-900 font-extrabold px-6 py-3 rounded-xl">💬 Cotizar por WhatsApp</a>
+      </div>
+
+      <form id="lead" class="bg-white text-slate-900 p-6 rounded-2xl shadow">
+        <h3 class="font-bold text-lg">Solicitar lista mayorista</h3>
+        <div class="grid grid-cols-1 gap-3 mt-3">
+          <input class="border p-3 rounded-lg" type="text" id="empresa" placeholder="Empresa" required>
+          <input class="border p-3 rounded-lg" type="text" id="nombre" placeholder="Nombre" required>
+          <input class="border p-3 rounded-lg" type="email" id="email" placeholder="Email" required>
+          <input class="border p-3 rounded-lg" type="tel" id="telefono" placeholder="Teléfono" required>
+          <textarea class="border p-3 rounded-lg" id="mensaje" placeholder="Tipo de proyecto (kW, sitio, etc.)" rows="3"></textarea>
+          <button class="bg-slate-900 text-white py-3 rounded-lg font-semibold hover:opacity-90">Enviar por Email</button>
+        </div>
+        <p class="text-xs text-slate-500 mt-2">También podés escribirnos por WhatsApp con el botón verde.</p>
+      </form>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="py-10 text-sm text-slate-500">
+    <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-4">
+      <div>© <span id="year"></span> Tedle Córdoba – Paneles Solares Tier One</div>
+      <div class="flex items-center gap-6">
+        <a href="#diferenciales" class="hover:text-slate-700">Diferenciales</a>
+        <a href="#kits" class="hover:text-slate-700">Kits</a>
+        <a href="#contacto" class="hover:text-slate-700">Contacto</a>
+      </div>
+    </div>
   </footer>
 
   <!-- Floating WhatsApp -->
@@ -100,21 +199,47 @@
       slides[index].classList.remove('active');
       index = (index + 1) % slides.length;
       slides[index].classList.add('active');
-    }, 5000); // cambia cada 5s
+    }, 5000);
   </script>
 
-  <!-- Script dinámico para CTAs y UTM -->
+  <!-- CONFIG + UTM/CTAs -->
   <script>
+    // ======== EDITAR ESTOS DATOS ========
     const WHATSAPP_NUMBER = "5493516123456";
-    const utm = window.location.search || "?utm_source=direct&utm_medium=none&utm_campaign=site";
-    function waLink(extra="") {
-      return `https://wa.me/${WHATSAPP_NUMBER}?text=${encodeURIComponent("Hola, quiero cotizar kits solares en Córdoba. " + extra + " " + utm)}`;
-    }
-    ["wa-top","wa-header","wa-cta-hero","wa-float"].forEach(id=>{
-      const a=document.getElementById(id);
-      if(a) a.href=waLink(a.textContent.trim());
-    });
+    const REP_EMAIL       = "ventascordoba@tedle.net";
+    const ADDRESS         = "Av. Colón 1234, Córdoba Capital";
+    const MAPS_LINK       = "https://goo.gl/maps/xxxxx";
+    // ====================================
+
     document.getElementById("year").textContent = new Date().getFullYear();
+    document.getElementById("direccion").textContent = ADDRESS;
+    document.getElementById("maps").href = MAPS_LINK;
+
+    const utm = window.location.search || "?utm_source=direct&utm_medium=none&utm_campaign=site";
+
+    function waLink(extra = "") {
+      const base = `https://wa.me/${WHATSAPP_NUMBER}`;
+      const text = `Hola, quiero cotizar kits solares Tier One en Córdoba. ${extra} ${utm}`;
+      return `${base}?text=${encodeURIComponent(text)}`;
+    }
+
+    ["wa-top","wa-header","wa-cta-hero","wa-cta-contacto","wa-pack1","wa-pack2","wa-pack3","wa-float"]
+      .forEach(id => { const a = document.getElementById(id); if (a) a.href = waLink(a.textContent?.trim()); });
+
+    document.getElementById("lead").addEventListener("submit", (e) => {
+      e.preventDefault();
+      const empresa  = document.getElementById("empresa").value;
+      const nombre   = document.getElementById("nombre").value;
+      const email    = document.getElementById("email").value;
+      const telefono = document.getElementById("telefono").value;
+      const mensaje  = document.getElementById("mensaje").value;
+
+      const subject = encodeURIComponent("Solicitud de lista mayorista - Tedle Córdoba");
+      const body = encodeURIComponent(
+        `Empresa: ${empresa}\nNombre: ${nombre}\nEmail: ${email}\nTeléfono: ${telefono}\nMensaje: ${mensaje}\n\nUTM: ${utm}`
+      );
+      window.location.href = `mailto:${REP_EMAIL}?subject=${subject}&body=${body}`;
+    });
   </script>
 </body>
 </html>
